# systemic

./: Cargo.toml  README.MD  commands.json  config.json  output.json
src/: command_executor.rs  config.rs  main.rs  output.rs  ssh_client.rs
